Update API URL to connect to server backend

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 # Backend API URL - Admin Panel
-VITE_API_URL=https://www.sunson-tech.com/admin-portal/api
+VITE_API_URL=https://www.sunson-tech.com/api
