--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "rewrites": [
-    { "source": "/api/:path*", "destination": "/api" }
-  ]
+  "buildCommand": "cd client && npm install && npm run build",
+  "outputDirectory": "client/dist",
+  "installCommand": "cd client && npm install",
+  "framework": "vite"
 }
