--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:server": "esbuild server/index.ts --platform=node --packages=external --external:./vite.js --external:./vite --external:../vite.config --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "seed:admin": "tsx server/seed-admin.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
