--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,26 @@
-node_modules
-dist
-.DS_Store
-server/public
-vite.config.ts.*
-*.tar.gz
+# Environment variables
+.env
+.env.local
+.env.production.local
+*.bat
+push-schema.bat
+init-db.bat
+
+# Database scripts with credentials
+server/seed-admin.ts
+server/check-user.ts
+test-login.js
+
+# Logs
+*.log
+
+# Dependencies
+node_modules/
+
+# Build outputs
+dist/
+.vercel/
+
+# Uploads
+uploads/*
+!uploads/.gitignore
