--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
+    "db:init": "tsx scripts/init-database.ts",
     "seed:admin": "tsx server/seed-admin.ts"
   },
   "dependencies": {
